--- a/README.rdoc
+++ b/README.rdoc
@@ -28,7 +28,7 @@ your test and development environments aren't trying to access the LockBox serve
 
 Untested.
 
-== Configuration
+== Client Configuration
 
 LockBox needs a configuration file named "lockbox.yml" in order to work. In a Rack app (incl. Rails),
 this file should be placed in app_root/config/lockbox.yml.
@@ -52,6 +52,24 @@ Here's an example lockbox.yml:
 
 The 'all' section of the yaml file is a LockBox-specific shortcut so you can DRY up your protected path definitions.
 Settings in more specific environments will override those in the 'all' section.
+
+== Server Installation
+
+Running your own LockBox server is pretty easy. Just clone this repository (I'd stick with the master branch)
+and set it up under your favorite Rails hosting environment. It has only been tested with PostgreSQL, but it's not
+doing anything exotic with the DB, so it will probably work with other databases too.
+
+The gem dependencies are generally kept up to date in the Gemfile, so you can use bundler:
+
+  gem install bundler
+  bundle install
+
+Or you can use the Rails 2 gem installer:
+
+  rake gems:install
+
+Then you should configure the database.yml for the test environment and run 'rake spec' in the app root to have RSpec
+(gem install rspec-rails) run all of the tests. If these all pass, then you're probably good to go.
 
 == Download
 
